--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         tools:targetApi="31">
         <activity
             android:name=".Configuration"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Bingo" />
 
 
         <activity
