--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/bongo_icon"
+        android:icon="@mipmap/bingo_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/bongo_icon_round"
+        android:roundIcon="@mipmap/bingo_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Bingo"
         tools:targetApi="31"
@@ -35,7 +35,7 @@
         </activity>
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-5781262120594788~6569309947"/>
+            android:value="ca-app-pub-3940256099942544~3347511713"/>
     </application>
 
 </manifest>
